# SIH-2024

./: embd.py  inmongo.py  model_versions.json  problem_statement.md  readme.md  tobase.py
Model/: style.css
backend/: .env  .gitignore  db.sqlite3  pyproject.toml
backend/.github/workflows/: encrypt-and-upload-model.yml
backend/core/: apps.py  models.py  tasks.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/core/utils/: encryption_utils.py
backend/face-verify-flask-api/: .env.example
backend/face-verify-flask-api/app/: routes.py
backend/face-verify-flask-api/app/services/: face_verification.py  image_utils.py
backend/faceauth/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/flask-api/: .env  app.py
backend/flask-api/app/: __init__.py
backend/flask-api/app/services/: db_utils.py
backend/mern-api/src/controllers/: auth.controllers.js  model.controllers.js
backend/mern-api/src/routes/: api.routes.js
backend/mern-api/src/utils/: encryption.utils.js
backend/mern-backend/: .env  app.js  package-lock.json  package.json
backend/mern-backend/Models/: user.js
backend/mern-backend/controllers/: authController.js  modelController.js
backend/mern-backend/middleware/: verifyModel.js
backend/mern-backend/routes/: api.js  auth.js
backend/mern-backend/utils/: encryptionUtils.js  hashUtils.js  processModel.js
backend/model-serve-express-api/src/routes/: auth.routes.js
backend/s3-uploads/: private_key.pem
backend/utils/: encryption_utils.py  generate-key.py
face-auth-frontend/: package-lock.json  (+1 more)
(+158 files in other folders)
